--- a/libmpris/Makefile.am
+++ b/libmpris/Makefile.am
@@ -5,7 +5,8 @@ INCLUDES = \
 	    $(XML_CFLAGS)		       \
 	    $(DBUS_CFLAGS)		       \
 	    -I$(top_builddir)/include/libmpris \
-	    -DDBUS_API_SUBJECT_TO_CHANGE
+	    -DDBUS_API_SUBJECT_TO_CHANGE       \
+	    -D__USE_GNU
 
 libmpris_la_LDFLAGS = -export-dynamic 
 libmpris_la_LIBADD = $(GLIB_CFLAGS) $(XML_LIBS) $(DBUS_LIBS)
