* Major updates to libmpris * Major updates to wmmpris

--- a/include/libmpris/mpris/Makefile.am
+++ b/include/libmpris/mpris/Makefile.am
@@ -4,4 +4,6 @@ libmpris_include_HEADERS = \
       connection.h    \
       dbus.h	      \
       mpris.h	      \
-      procedures.h
+      procedures.h    \
+      mpris-list.h
+
