* Create MPRISClient* structure (works only with patched dbus, see:   'http://mjj29.matthew.ath.cx/dbus.patch' (Matthew Johnson), patch   against dbus 0.50)

--- a/libmpris/Makefile.am
+++ b/libmpris/Makefile.am
@@ -7,7 +7,7 @@ INCLUDES = \
 	    -D__USE_GNU
 
 libmpris_la_LDFLAGS = -export-dynamic 
-libmpris_la_LIBADD = $(DBUS_LIBS)
+libmpris_la_LIBADD = $(DBUS_LIBS) -lpthread
 
 libmpris_la_SOURCES = \
     connection.c  \
