--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,6 +5,8 @@ transform = s/_/-/g
 mpris_demo_LDFLAGS = -Wl, --export-dynamic
 
 mpris_demo_LDADD = \
+	$(GTK_LIBS) \
+	$(GLADE_LIBS) \
 	$(DBUS_LIBS)			      \
 	$(top_builddir)/libmpris/libmpris.la
 
@@ -13,6 +15,8 @@ mpris_demo_CFLAGS = \
 	-I$(top_srcdir)/include/libmpris             \
 	-DG_LOG_DOMAIN=\"MPRIS\"                     \
 	-DDBUS_API_SUBJECT_TO_CHANGE		     \
+	$(GTK_CFLAGS)				     \
+	$(GLADE_CFLAGS)				     \
 	$(DBUS_CFLAGS)				     \
 	$(MPRIS_DEFINES)
 
