--- a/include/libmpris/mpris/Makefile.am
+++ b/include/libmpris/mpris/Makefile.am
@@ -1,9 +1,10 @@
 libmpris_includedir = $(includedir)/libmpris/mpris
 
-libmpris_include_HEADERS = \
-      connection.h    \
-      dbus.h	      \
-      mpris.h	      \
-      procedures.h    \
+libmpris_include_HEADERS = 	\
+      connection.h   				\
+      dbus.h	      				\
+      mpris.h	      				\
+      procedures.h    			\
+			list.h								\
       mpris-list.h
 
