* Fix list implemenetation

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,19 +1,29 @@
-bin_PROGRAMS = mpris_demo 
+bin_PROGRAMS = mpris_demo mpris_list 
 
 transform = s/_/-/g
 
-mpris_demo_LDFLAGS = -Wl, --export-dynamic
+COMMON_LDFLAGS = -Wl, --export-dynamic
 
-mpris_demo_LDADD = \
-	$(DBUS_LIBS)			      \
+COMMON_LDADD = 													\
+	$(DBUS_LIBS)			      							\
 	$(top_builddir)/libmpris/libmpris.la
 
-mpris_demo_CFLAGS = \
-	-I$(top_srcdir)                              \
-	-I$(top_srcdir)/include/libmpris             \
-	-DG_LOG_DOMAIN=\"MPRIS\"                     \
-	$(DBUS_CFLAGS)				     \
-	$(MPRIS_DEFINES)
+COMMON_CFLAGS = 												\
+	-I$(top_srcdir)                     	\
+	-I$(top_srcdir)/include/libmpris    	\
+	-DG_LOG_DOMAIN=\"MPRIS\"            	\
+	$(DBUS_CFLAGS)				     						\
+	$(MPRIS_DEFINES)											\
+	-D__USE_BSD
 
+mpris_demo_LDFLAGS = $(COMMON_LDFLAGS) 
+mpris_demo_LDADD = $(COMMON_LDADD)	
+mpris_demo_CFLAGS = $(COMMON_CFLAGS)
 mpris_demo_SOURCES = \
 	 mpris-demo.c
+
+mpris_list_LDFLAGS = $(COMMON_LDFLAGS) 
+mpris_list_LDADD = $(COMMON_LDADD)	
+mpris_list_CFLAGS = $(COMMON_CFLAGS)
+mpris_list_SOURCES = \
+	 mpris-list.c
