* Remove unneccessary stuff, etc

--- a/include/libmpris/mpris/Makefile.am
+++ b/include/libmpris/mpris/Makefile.am
@@ -4,6 +4,6 @@ libmpris_include_HEADERS = 	\
       dbus.h	      				\
 			list.h								\
       mpris.h	      				\
-			mpris-types.h
+			types.h
 
 
