--- a/libmpris/Makefile.am
+++ b/libmpris/Makefile.am
@@ -10,8 +10,7 @@ libmpris_la_LDFLAGS = -export-dynamic
 libmpris_la_LIBADD = $(DBUS_LIBS) -lpthread
 
 libmpris_la_SOURCES = \
-    connection.c  		\
     dbus.c	  				\
     mpris.c	  				\
-		list.c						\
-    procedures.c  
+		list.c						
+
