--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = libmpris src
+SUBDIRS = libmpris src include
 
 pkgconfigdir = ${libdir}/pkgconfig
 pkgconfig_DATA = mpris.pc
