Actually add the CFLAGS to libmpris.

--- a/libmpris/Makefile.am
+++ b/libmpris/Makefile.am
@@ -2,6 +2,7 @@ lib_LTLIBRARIES = libmpris.la
 
 INCLUDES = \
 		$(DBUS_CFLAGS) 				\
+		$(CFLAGS) 					\
 		-I$(top_builddir)/include 	\
 		-DDBUS_API_SUBJECT_TO_CHANGE 		\
 		-D__USE_GNU
