Add a simple mpris controller program. Now we can use mpris in our WM shortcuts. ;-)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = mpris_demo mpris_list 
+bin_PROGRAMS = mpris_demo mpris_list mpris_control
 
 transform = s/_/-/g
 
@@ -27,3 +27,9 @@ mpris_list_LDADD = $(COMMON_LDADD)
 mpris_list_CFLAGS = $(COMMON_CFLAGS)
 mpris_list_SOURCES = \
 	 mpris-list.c
+
+mpris_control_LDFLAGS = $(COMMON_LDFLAGS) 
+mpris_control_LDADD = $(COMMON_LDADD)	
+mpris_control_CFLAGS = $(COMMON_CFLAGS)
+mpris_control_SOURCES = \
+	 mpris-control.c
